kubernetes/external/minecraft/playzir/ingress-route-tcp.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: playzir-minecraft-tcp
  namespace: minecraft
spec:
  entryPoints:
    - playzir-mc
  routes:
    - match: HostSNI(`*`)
      services:
        - name: playzir-minecraft
          port: 25565
