kubernetes/external/minecraft/playzir/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: minecraft-tcp
spec:
  entryPoints:
    - playir-mc
  routes:
    - match: HostSNI(`*`)
      services:
        - name: playzir-minecraft
          port: 25565
